# OpenCafeMol

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  open_aicg2plus.cpp
.github/workflows/: main.yml
cmake/: FindOpenMM.cmake
cmake_modules/: FindOpenMM.cmake
math/: constants.hpp
sample/: POPC_flat_membrane_128.toml  dna_3SPN2.toml  dna_3SPN2C.toml  sh3_AICG2+.toml
sample/genesis_input/: 1SRL_cg.gro  1SRL_cg.inp  1SRL_cg.itp  1SRL_cg.top
sample/toml_input/: FUS_100_HPS.toml  POPC_flat_membrane_128.toml  POPC_flat_membrane_128_MembraneBarostat.toml  dna_3SPN2.toml  dna_3SPN2C.toml  dna_3SPN2_localize.toml  nucleosome_1kx5.toml  sh3_AICG2+.toml
src/: CMakeLists.txt  Constants.hpp  EnumTables.hpp  IntegratorGenerator.cpp  IntegratorGenerator.hpp  Observer.cpp  Observer.hpp  OpenAICG2Plus.cpp  OpenAicg2Plus.cpp  ReadInput.hpp  Simulator.cpp  Simulator.hpp  SystemGenerator.cpp  SystemGenerator.hpp  Topology.cpp  Topology.hpp  Utility.hpp  Utillity.hpp  open_aicg2plus.cpp  toml11_fwd.hpp
src/forcefield/: BarostatGeneratorBase.hpp  CMakeLists.txt  CappedGoContactForceFieldGenerator.cpp  CappedGoContactForceFieldGenerator.hpp  CombinatorialGoContactForceFieldGenerator.cpp  CombinatorialGoContactForceFieldGenerator.hpp  CosineDihedralForceFieldGenerator.cpp  CosineDihedralForceFieldGenerator.hpp  CylindricalRestraintForceFieldGenerator.cpp  CylindricalRestraintForceFieldGenerator.hpp  DebyeHuckelForceFieldGenerator.cpp  DebyeHuckelForceFieldGenerator.hpp  EXVRectangularBoxForceFieldGenerator.cpp  EXVRectangularBoxForceFieldGenerator.hpp  ExcludedVolumeForceFieldGenerator.cpp  ExcludedVolumeForceFieldGenerator.hpp  FlexibleLocalAngleForceFieldGenerator.cpp  FlexibleLocalAngleForceFieldGenerator.hpp  FlexibleLocalDihedralForceFieldGenerator.cpp  FlexibleLocalDihedralForceFieldGenerator.hpp  ForceFieldGeneratorBase.hpp  ForceFieldIDGenerator.hpp  GaussianBondForceFieldGenerator.cpp  GaussianBondForceFieldGenerator.hpp  GaussianCosineDihedralForceFieldGenerator.hpp  GaussianDihedralForceFieldGenerator.cpp  GaussianDihedralForceFieldGenerator.hpp  GoContactForceFieldGenerator.cpp  GoContactForceFieldGenerator.hpp  HarmonicAngleForceFieldGenerator.cpp  HarmonicAngleForceFieldGenerator.hpp  HarmonicBondForceFieldGenerator.cpp  HarmonicBondForceFieldGenerator.hpp  HarmonicCoMPullingForceFieldGenerator.cpp  HarmonicCoMPullingForceFieldGenerator.hpp  InteractionGroup.hpp  LennardJonesAttractiveForceFieldGenerator.cpp  LennardJonesAttractiveForceFieldGenerator.hpp  LennardJonesRepulsiveForceFieldGenerator.cpp  LennardJonesRepulsiveForceFieldGenerator.hpp  (+35 more)
src/input/: CMakeLists.txt  ReadForceFieldGenerator.hpp  ReadGenesisForceFieldGenerator.cpp  ReadGenesisForceFieldGenerator.hpp  ReadGenesisInput.cpp  ReadGenesisInput.hpp  ReadInput.hpp  ReadTOMLForceFieldGenerator.cpp  ReadTOMLForceFieldGenerator.hpp  ReadTOMLInput.cpp  ReadTOMLInput.hpp  Utility.cpp  Utility.hpp
src/util/: CMakeLists.txt  Constants.hpp  Logger.cpp  Logger.hpp  Macro.hpp  ProgressBar.cpp  ProgressBar.hpp  Utility.cpp  Utility.hpp
test/: CMakeLists.txt  test_read_genesis_input.cpp  test_read_toml_ff_generator.cpp
test/input/: included.inp  included_with_comment.inp  test_preprocess_top_file_input.top  test_read_inp_file_input.inp  test_read_top_file_input.top
